@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,6 +60,24 @@ import java.nio.ByteOrder;
  * @run driver compiler.loopopts.superword.TestAlignVector VerifyAlignVector
  */
 
+/*
+ * @test id=NoAlignVector-COH
+ * @bug 8310190
+ * @summary Test AlignVector with various loop init, stride, scale, invar, etc.
+ * @modules java.base/jdk.internal.misc
+ * @library /test/lib /
+ * @run driver compiler.loopopts.superword.TestAlignVector NoAlignVector-COH
+ */
+
+/*
+ * @test id=VerifyAlignVector-COH
+ * @bug 8310190
+ * @summary Test AlignVector with various loop init, stride, scale, invar, etc.
+ * @modules java.base/jdk.internal.misc
+ * @library /test/lib /
+ * @run driver compiler.loopopts.superword.TestAlignVector VerifyAlignVector-COH
+ */
+
 public class TestAlignVector {
     static int RANGE = 1024*8;
     static int RANGE_FINAL = 1024*8;
@@ -96,9 +114,11 @@ public class TestAlignVector {
                            "-XX:+IgnoreUnrecognizedVMOptions", "-XX:LoopUnrollLimit=250");
 
         switch (args[0]) {
-            case "NoAlignVector"     -> { framework.addFlags("-XX:-AlignVector"); }
-            case "AlignVector"       -> { framework.addFlags("-XX:+AlignVector"); }
-            case "VerifyAlignVector" -> { framework.addFlags("-XX:+AlignVector", "-XX:+IgnoreUnrecognizedVMOptions", "-XX:+VerifyAlignVector"); }
+            case "NoAlignVector"         -> { framework.addFlags("-XX:-UseCompactObjectHeaders", "-XX:-AlignVector"); }
+            case "AlignVector"           -> { framework.addFlags("-XX:-UseCompactObjectHeaders", "-XX:+AlignVector"); }
+            case "VerifyAlignVector"     -> { framework.addFlags("-XX:-UseCompactObjectHeaders", "-XX:+AlignVector", "-XX:+IgnoreUnrecognizedVMOptions", "-XX:+VerifyAlignVector"); }
+            case "NoAlignVector-COH"     -> { framework.addFlags("-XX:+UseCompactObjectHeaders", "-XX:-AlignVector"); }
+            case "VerifyAlignVector-COH" -> { framework.addFlags("-XX:+UseCompactObjectHeaders", "-XX:+AlignVector", "-XX:+IgnoreUnrecognizedVMOptions", "-XX:+VerifyAlignVector"); }
             default -> { throw new RuntimeException("Test argument not recognized: " + args[0]); }
         }
         framework.start();
@@ -117,7 +137,8 @@ public class TestAlignVector {
 
         // Add all tests to list
         tests.put("test0",       () -> { return test0(aB.clone(), bB.clone(), mB); });
-        tests.put("test1",       () -> { return test1(aB.clone(), bB.clone(), mB); });
+        tests.put("test1a",      () -> { return test1a(aB.clone(), bB.clone(), mB); });
+        tests.put("test1b",      () -> { return test1b(aB.clone(), bB.clone(), mB); });
         tests.put("test2",       () -> { return test2(aB.clone(), bB.clone(), mB); });
         tests.put("test3",       () -> { return test3(aB.clone(), bB.clone(), mB); });
         tests.put("test4",       () -> { return test4(aB.clone(), bB.clone(), mB); });
@@ -132,6 +153,7 @@ public class TestAlignVector {
         tests.put("test10b",     () -> { return test10b(aB.clone(), bB.clone(), mB); });
         tests.put("test10c",     () -> { return test10c(aS.clone(), bS.clone(), mS); });
         tests.put("test10d",     () -> { return test10d(aS.clone(), bS.clone(), mS); });
+        tests.put("test10e",     () -> { return test10e(aS.clone(), bS.clone(), mS); });
 
         tests.put("test11aB",    () -> { return test11aB(aB.clone(), bB.clone(), mB); });
         tests.put("test11aS",    () -> { return test11aS(aS.clone(), bS.clone(), mS); });
@@ -168,6 +190,9 @@ public class TestAlignVector {
         tests.put("test14aB",    () -> { return test14aB(aB.clone()); });
         tests.put("test14bB",    () -> { return test14bB(aB.clone()); });
         tests.put("test14cB",    () -> { return test14cB(aB.clone()); });
+        tests.put("test14dB",    () -> { return test14dB(aB.clone()); });
+        tests.put("test14eB",    () -> { return test14eB(aB.clone()); });
+        tests.put("test14fB",    () -> { return test14fB(aB.clone()); });
 
         tests.put("test15aB",    () -> { return test15aB(aB.clone()); });
         tests.put("test15bB",    () -> { return test15bB(aB.clone()); });
@@ -198,7 +223,8 @@ public class TestAlignVector {
 
     @Warmup(100)
     @Run(test = {"test0",
-                 "test1",
+                 "test1a",
+                 "test1b",
                  "test2",
                  "test3",
                  "test4",
@@ -211,6 +237,7 @@ public class TestAlignVector {
                  "test10b",
                  "test10c",
                  "test10d",
+                 "test10e",
                  "test11aB",
                  "test11aS",
                  "test11aI",
@@ -239,6 +266,9 @@ public class TestAlignVector {
                  "test14aB",
                  "test14bB",
                  "test14cB",
+                 "test14dB",
+                 "test14eB",
+                 "test14fB",
                  "test15aB",
                  "test15bB",
                  "test15cB",
@@ -382,7 +412,7 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIf = {"MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test0(byte[] a, byte[] b, byte mask) {
         for (int i = 0; i < RANGE; i+=8) {
             // Safe to vectorize with AlignVector
@@ -398,13 +428,37 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
                   IRNode.AND_VB, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
+        // UNSAFE.ARRAY_BYTE_BASE_OFFSET = 16, but with compact object headers UNSAFE.ARRAY_BYTE_BASE_OFFSET=12.
+        // If AlignVector=true, we need the offset to be 8-byte aligned, else the vectors are filtered out.
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
-    static Object[] test1(byte[] a, byte[] b, byte mask) {
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+    static Object[] test1a(byte[] a, byte[] b, byte mask) {
         for (int i = 0; i < RANGE; i+=8) {
-            // Safe to vectorize with AlignVector
-            b[i+0] = (byte)(a[i+0] & mask); // offset 0, align 0
+            b[i+0] = (byte)(a[i+0] & mask); // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 0 + iter*8
+            b[i+1] = (byte)(a[i+1] & mask);
+            b[i+2] = (byte)(a[i+2] & mask);
+            b[i+3] = (byte)(a[i+3] & mask);
+            b[i+4] = (byte)(a[i+4] & mask);
+            b[i+5] = (byte)(a[i+5] & mask);
+            b[i+6] = (byte)(a[i+6] & mask);
+            b[i+7] = (byte)(a[i+7] & mask);
+        }
+        return new Object[]{ a, b };
+    }
+
+    @Test
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
+                  IRNode.AND_VB, "> 0",
+                  IRNode.STORE_VECTOR, "> 0"},
+        applyIfOr = {"UseCompactObjectHeaders", "true", "AlignVector", "false"},
+        // UNSAFE.ARRAY_BYTE_BASE_OFFSET = 16, but with compact object headers UNSAFE.ARRAY_BYTE_BASE_OFFSET=12.
+        // If AlignVector=true, we need the offset to be 8-byte aligned, else the vectors are filtered out.
+        applyIfPlatform = {"64-bit", "true"},
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+    static Object[] test1b(byte[] a, byte[] b, byte mask) {
+        for (int i = 4; i < RANGE-8; i+=8) {
+            b[i+0] = (byte)(a[i+0] & mask); // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 4 + iter*8
             b[i+1] = (byte)(a[i+1] & mask);
             b[i+2] = (byte)(a[i+2] & mask);
             b[i+3] = (byte)(a[i+3] & mask);
@@ -422,11 +476,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test2(byte[] a, byte[] b, byte mask) {
@@ -446,11 +500,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test3(byte[] a, byte[] b, byte mask) {
@@ -474,7 +528,7 @@ public class TestAlignVector {
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_8, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=16"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE_4, "> 0",
@@ -482,7 +536,7 @@ public class TestAlignVector {
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_8, "= 0",// unaligned
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "true", "MaxVectorSize", ">=16"})
     static Object[] test4(byte[] a, byte[] b, byte mask) {
@@ -511,11 +565,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test5(byte[] a, byte[] b, byte mask, int inv) {
@@ -537,11 +591,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test6(byte[] a, byte[] b, byte mask) {
@@ -563,11 +617,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=16"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_S, "= 0",
                   IRNode.AND_VS, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test7(short[] a, short[] b, short mask) {
@@ -589,11 +643,11 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test8(byte[] a, byte[] b, byte mask, int init) {
@@ -615,7 +669,7 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIf = {"MaxVectorSize", ">=8"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test9(byte[] a, byte[] b, byte mask) {
         // known non-zero init value does not affect offset, but has implicit effect on iv
         for (int i = 13; i < RANGE-8; i+=8) {
@@ -633,13 +687,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test10a(byte[] a, byte[] b, byte mask) {
@@ -657,13 +711,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.AND_VB,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=8"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test10b(byte[] a, byte[] b, byte mask) {
@@ -682,13 +736,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.AND_VS,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=16"})
     @IR(counts = {IRNode.LOAD_VECTOR_S, "= 0",
                   IRNode.AND_VS, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test10c(short[] a, short[] b, short mask) {
@@ -708,11 +762,33 @@ public class TestAlignVector {
                   IRNode.AND_VS,        IRNode.VECTOR_SIZE_4, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfAnd = {"MaxVectorSize", ">=16", "UseCompactObjectHeaders", "false"},
+        // UNSAFE.ARRAY_BYTE_BASE_OFFSET = 16, but with compact object headers UNSAFE.ARRAY_BYTE_BASE_OFFSET=12.
+        // If AlignVector=true, we need the offset to be 8-byte aligned, else the vectors are filtered out.
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test10d(short[] a, short[] b, short mask) {
         for (int i = 13; i < RANGE-16; i+=8) {
-            // init + offset -> aligned
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*(3 + 13) + iter*16
+            b[i+0+3] = (short)(a[i+0+3] & mask);
+            b[i+1+3] = (short)(a[i+1+3] & mask);
+            b[i+2+3] = (short)(a[i+2+3] & mask);
+            b[i+3+3] = (short)(a[i+3+3] & mask);
+        }
+        return new Object[]{ a, b };
+    }
+
+    @Test
+    @IR(counts = {IRNode.LOAD_VECTOR_S, IRNode.VECTOR_SIZE_4, "> 0",
+                  IRNode.AND_VS,        IRNode.VECTOR_SIZE_4, "> 0",
+                  IRNode.STORE_VECTOR, "> 0"},
+        applyIfAnd = {"MaxVectorSize", ">=16", "UseCompactObjectHeaders", "true"},
+        // UNSAFE.ARRAY_BYTE_BASE_OFFSET = 16, but with compact object headers UNSAFE.ARRAY_BYTE_BASE_OFFSET=12.
+        // If AlignVector=true, we need the offset to be 8-byte aligned, else the vectors are filtered out.
+        applyIfPlatform = {"64-bit", "true"},
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
+    static Object[] test10e(short[] a, short[] b, short mask) {
+        for (int i = 11; i < RANGE-16; i+=8) {
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*(3 + 11) + iter*16
             b[i+0+3] = (short)(a[i+0+3] & mask);
             b[i+1+3] = (short)(a[i+1+3] & mask);
             b[i+2+3] = (short)(a[i+2+3] & mask);
@@ -726,7 +802,7 @@ public class TestAlignVector {
                   IRNode.AND_VB, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11aB(byte[] a, byte[] b, byte mask) {
         for (int i = 0; i < RANGE; i++) {
             // always alignable
@@ -740,7 +816,7 @@ public class TestAlignVector {
                   IRNode.AND_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11aS(short[] a, short[] b, short mask) {
         for (int i = 0; i < RANGE; i++) {
             // always alignable
@@ -754,7 +830,7 @@ public class TestAlignVector {
                   IRNode.AND_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11aI(int[] a, int[] b, int mask) {
         for (int i = 0; i < RANGE; i++) {
             // always alignable
@@ -768,7 +844,7 @@ public class TestAlignVector {
                   IRNode.AND_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11aL(long[] a, long[] b, long mask) {
         for (int i = 0; i < RANGE; i++) {
             // always alignable
@@ -782,7 +858,7 @@ public class TestAlignVector {
                   IRNode.AND_VB, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11bB(byte[] a, byte[] b, byte mask) {
         for (int i = 1; i < RANGE; i++) {
             // always alignable
@@ -796,7 +872,7 @@ public class TestAlignVector {
                   IRNode.AND_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11bS(short[] a, short[] b, short mask) {
         for (int i = 1; i < RANGE; i++) {
             // always alignable
@@ -810,7 +886,7 @@ public class TestAlignVector {
                   IRNode.AND_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11bI(int[] a, int[] b, int mask) {
         for (int i = 1; i < RANGE; i++) {
             // always alignable
@@ -824,7 +900,7 @@ public class TestAlignVector {
                   IRNode.AND_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11bL(long[] a, long[] b, long mask) {
         for (int i = 1; i < RANGE; i++) {
             // always alignable
@@ -837,13 +913,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
                   IRNode.AND_VB, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.AND_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test11cB(byte[] a, byte[] b, byte mask) {
@@ -858,13 +934,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_S, "> 0",
                   IRNode.AND_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_S, "= 0",
                   IRNode.AND_VS, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test11cS(short[] a, short[] b, short mask) {
@@ -879,13 +955,13 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_I, "> 0",
                   IRNode.AND_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_I, "= 0",
                   IRNode.AND_VI, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test11cI(int[] a, int[] b, int mask) {
@@ -901,7 +977,7 @@ public class TestAlignVector {
                   IRNode.AND_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11cL(long[] a, long[] b, long mask) {
         for (int i = 1; i < RANGE-1; i++) {
             // always alignable (8 byte offset)
@@ -915,7 +991,7 @@ public class TestAlignVector {
                   IRNode.AND_VB, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11dB(byte[] a, byte[] b, byte mask, int invar) {
         for (int i = 0; i < RANGE; i++) {
             b[i+0+invar] = (byte)(a[i+0+invar] & mask);
@@ -928,7 +1004,7 @@ public class TestAlignVector {
                   IRNode.AND_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11dS(short[] a, short[] b, short mask, int invar) {
         for (int i = 0; i < RANGE; i++) {
             b[i+0+invar] = (short)(a[i+0+invar] & mask);
@@ -941,7 +1017,7 @@ public class TestAlignVector {
                   IRNode.AND_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11dI(int[] a, int[] b, int mask, int invar) {
         for (int i = 0; i < RANGE; i++) {
             b[i+0+invar] = (int)(a[i+0+invar] & mask);
@@ -954,7 +1030,7 @@ public class TestAlignVector {
                   IRNode.AND_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test11dL(long[] a, long[] b, long mask, int invar) {
         for (int i = 0; i < RANGE; i++) {
             b[i+0+invar] = (long)(a[i+0+invar] & mask);
@@ -963,14 +1039,15 @@ public class TestAlignVector {
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
-                  IRNode.AND_VB, "= 0",
-                  IRNode.STORE_VECTOR, "= 0"},
+    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_byte, 4)", "> 0",
+                  IRNode.AND_VB,        IRNode.VECTOR_SIZE + "min(max_byte, 4)", "> 0",
+                  IRNode.STORE_VECTOR,                                           "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIf = {"AlignVector", "false"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test12(byte[] a, byte[] b, byte mask) {
         for (int i = 0; i < RANGE/16; i++) {
-            // Currently does not vectorize at all
+            // Non-power-of-2 stride. Vectorization of 4 bytes, then 2-bytes gap.
             b[i*6 + 0 ] = (byte)(a[i*6 + 0 ] & mask);
             b[i*6 + 1 ] = (byte)(a[i*6 + 1 ] & mask);
             b[i*6 + 2 ] = (byte)(a[i*6 + 2 ] & mask);
@@ -986,8 +1063,16 @@ public class TestAlignVector {
                   IRNode.ADD_VL, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true"})
+        applyIfCPUFeature = {"avx2", "true"})
     // require avx to ensure vectors are larger than what unrolling produces
+    @IR(counts = {IRNode.LOAD_VECTOR_I, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.LOAD_VECTOR_L, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.ADD_VI, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.ADD_VL, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.STORE_VECTOR, "> 0"},
+        applyIfPlatform = {"riscv64", "true"},
+        applyIfCPUFeature = {"rvv", "true"},
+        applyIf = {"MaxVectorSize", ">=32"})
     static Object[] test13aIL(int[] a, long[] b) {
         for (int i = 0; i < RANGE; i++) {
             a[i]++;
@@ -1002,13 +1087,26 @@ public class TestAlignVector {
                   IRNode.ADD_VB, "> 0",
                   IRNode.ADD_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13aIB(int[] a, byte[] b) {
         for (int i = 0; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 1*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_INT_BASE_OFFSET  + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // For AlignVector, all adr must be 8-byte aligned. Let's see for which iteration this can hold:
+            // If UseCompactObjectHeaders=false:
+            //   a: 0, 8, 16, 24, 32, ...
+            //   b: 0, 2,  4,  6,  8, ...
+            //   -> Ok, aligns every 8th iteration.
+            // If UseCompactObjectHeaders=true:
+            //   a: 4, 12, 20, 28, 36, ...
+            //   b: 1,  3,  5,  7,  9, ...
+            //   -> we can never align both vectors!
         }
         return new Object[]{ a, b };
     }
@@ -1019,13 +1117,26 @@ public class TestAlignVector {
                   IRNode.ADD_VI, "> 0",
                   IRNode.ADD_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13aIS(int[] a, short[] b) {
         for (int i = 0; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // For AlignVector, all adr must be 8-byte aligned. Let's see for which iteration this can hold:
+            // If UseCompactObjectHeaders=false:
+            //   a: iter % 2 == 0
+            //   b: iter % 4 == 0
+            //   -> Ok, aligns every 4th iteration.
+            // If UseCompactObjectHeaders=true:
+            //   a: iter % 2 = 1
+            //   b: iter % 4 = 2
+            //   -> we can never align both vectors!
         }
         return new Object[]{ a, b };
     }
@@ -1040,15 +1151,27 @@ public class TestAlignVector {
                   IRNode.ADD_VI, "> 0",
                   IRNode.ADD_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13aBSIL(byte[] a, short[] b, int[] c, long[] d) {
         for (int i = 0; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 1*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // adr = base + UNSAFE.ARRAY_INT_BASE_OFFSET + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             c[i]++;
+            // adr = base + UNSAFE.ARRAY_LONG_BASE_OFFSET + 8*iter
+            //              = 16 (always)
             d[i]++;
+            // If AlignVector and UseCompactObjectHeaders, and we want all adr 8-byte aligned:
+            //   a: iter % 8 = 4
+            //   c: iter % 2 = 1
+            //   -> can never align both vectors!
         }
         return new Object[]{ a, b, c, d };
     }
@@ -1060,8 +1183,16 @@ public class TestAlignVector {
                   IRNode.ADD_VL, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true"})
+        applyIfCPUFeature = {"avx2", "true"})
     // require avx to ensure vectors are larger than what unrolling produces
+    @IR(counts = {IRNode.LOAD_VECTOR_I, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.LOAD_VECTOR_L, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.ADD_VI, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.ADD_VL, IRNode.VECTOR_SIZE + "min(max_int, max_long)", "> 0",
+                  IRNode.STORE_VECTOR, "> 0"},
+        applyIfPlatform = {"riscv64", "true"},
+        applyIfCPUFeature = {"rvv", "true"},
+        applyIf = {"MaxVectorSize", ">=32"})
     static Object[] test13bIL(int[] a, long[] b) {
         for (int i = 1; i < RANGE; i++) {
             a[i]++;
@@ -1076,13 +1207,21 @@ public class TestAlignVector {
                   IRNode.ADD_VB, "> 0",
                   IRNode.ADD_VI, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13bIB(int[] a, byte[] b) {
         for (int i = 1; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_INT_BASE_OFFSET + 4 + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 1 + 1*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // If AlignVector and UseCompactObjectHeaders, and we want all adr 8-byte aligned:
+            //   a: iter % 2 = 0
+            //   b: iter % 8 = 3
+            //   -> can never align both vectors!
         }
         return new Object[]{ a, b };
     }
@@ -1093,13 +1232,21 @@ public class TestAlignVector {
                   IRNode.ADD_VI, "> 0",
                   IRNode.ADD_VS, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13bIS(int[] a, short[] b) {
         for (int i = 1; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_INT_BASE_OFFSET + 4 + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2 + 2*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // If AlignVector and UseCompactObjectHeaders, and we want all adr 8-byte aligned:
+            //   a: iter % 2 = 0
+            //   b: iter % 4 = 1
+            //   -> can never align both vectors!
         }
         return new Object[]{ a, b };
     }
@@ -1114,33 +1261,162 @@ public class TestAlignVector {
                   IRNode.ADD_VI, "> 0",
                   IRNode.ADD_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIf = {"UseCompactObjectHeaders", "false"},
+        applyIfOr = {"UseCompactObjectHeaders", "false", "AlignVector", "false"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"avx2", "true", "asimd", "true", "rvv", "true"})
     static Object[] test13bBSIL(byte[] a, short[] b, int[] c, long[] d) {
         for (int i = 1; i < RANGE; i++) {
+            // adr = base + UNSAFE.ARRAY_BYTE_BASE_OFFSET + 1 + 1*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             a[i]++;
+            // adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2 + 2*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             b[i]++;
+            // adr = base + UNSAFE.ARRAY_INT_BASE_OFFSET + 4 + 4*iter
+            //              = 16 (or 12 if UseCompactObjectHeaders=true)
             c[i]++;
+            // adr = base + UNSAFE.ARRAY_LONG_BASE_OFFSET + 8 + 8*iter
+            //              = 16 (always)
             d[i]++;
+            // If AlignVector and UseCompactObjectHeaders, and we want all adr 8-byte aligned:
+            //   a: iter % 8 = 3
+            //   c: iter % 2 = 0
+            //   -> can never align both vectors!
         }
         return new Object[]{ a, b, c, d };
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
-                  IRNode.ADD_VB, "> 0",
-                  IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.ADD_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test14aB(byte[] a) {
+        // non-power-of-2 stride
+        for (int i = 0; i < RANGE-20; i+=9) {
+            // Since the stride is shorter than the vector length, there will be always
+            // partial overlap of loads with previous stores, this leads to failure in
+            // store-to-load-forwarding -> vectorization not profitable.
+            a[i+0]++;
+            a[i+1]++;
+            a[i+2]++;
+            a[i+3]++;
+            a[i+4]++;
+            a[i+5]++;
+            a[i+6]++;
+            a[i+7]++;
+            a[i+8]++;
+            a[i+9]++;
+            a[i+10]++;
+            a[i+11]++;
+            a[i+12]++;
+            a[i+13]++;
+            a[i+14]++;
+            a[i+15]++;
+        }
+        return new Object[]{ a };
+    }
+
+    @Test
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "true"})
+    static Object[] test14bB(byte[] a) {
+        // non-power-of-2 stride
+        for (int i = 0; i < RANGE-20; i+=3) {
+            // Since the stride is shorter than the vector length, there will be always
+            // partial overlap of loads with previous stores, this leads to failure in
+            // store-to-load-forwarding -> vectorization not profitable.
+            a[i+0]++;
+            a[i+1]++;
+            a[i+2]++;
+            a[i+3]++;
+            a[i+4]++;
+            a[i+5]++;
+            a[i+6]++;
+            a[i+7]++;
+            a[i+8]++;
+            a[i+9]++;
+            a[i+10]++;
+            a[i+11]++;
+            a[i+12]++;
+            a[i+13]++;
+            a[i+14]++;
+            a[i+15]++;
+        }
+        return new Object[]{ a };
+    }
+
+    @Test
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "true"})
+    static Object[] test14cB(byte[] a) {
+        // non-power-of-2 stride
+        for (int i = 0; i < RANGE-20; i+=5) {
+            // Since the stride is shorter than the vector length, there will be always
+            // partial overlap of loads with previous stores, this leads to failure in
+            // store-to-load-forwarding -> vectorization not profitable.
+            a[i+0]++;
+            a[i+1]++;
+            a[i+2]++;
+            a[i+3]++;
+            a[i+4]++;
+            a[i+5]++;
+            a[i+6]++;
+            a[i+7]++;
+            a[i+8]++;
+            a[i+9]++;
+            a[i+10]++;
+            a[i+11]++;
+            a[i+12]++;
+            a[i+13]++;
+            a[i+14]++;
+            a[i+15]++;
+        }
+        return new Object[]{ a };
+    }
+
+    @Test
+    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.ADD_VB,        IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.STORE_VECTOR,                                           "> 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "false"})
+    @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
+                  IRNode.ADD_VB, "= 0",
+                  IRNode.STORE_VECTOR, "= 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
+        applyIfPlatform = {"64-bit", "true"},
+        applyIf = {"AlignVector", "true"})
+    static Object[] test14dB(byte[] a) {
         // non-power-of-2 stride
         for (int i = 0; i < RANGE-20; i+=9) {
             a[i+0]++;
@@ -1151,34 +1427,26 @@ public class TestAlignVector {
             a[i+5]++;
             a[i+6]++;
             a[i+7]++;
-            a[i+8]++;
-            a[i+9]++;
-            a[i+10]++;
-            a[i+11]++;
-            a[i+12]++;
-            a[i+13]++;
-            a[i+14]++;
-            a[i+15]++;
         }
         return new Object[]{ a };
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
-                  IRNode.ADD_VB, "> 0",
-                  IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.ADD_VB,        IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.STORE_VECTOR,                                           "> 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.ADD_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
-    static Object[] test14bB(byte[] a) {
+    static Object[] test14eB(byte[] a) {
         // non-power-of-2 stride
-        for (int i = 0; i < RANGE-20; i+=3) {
+        for (int i = 0; i < RANGE-32; i+=11) {
             a[i+0]++;
             a[i+1]++;
             a[i+2]++;
@@ -1187,34 +1455,26 @@ public class TestAlignVector {
             a[i+5]++;
             a[i+6]++;
             a[i+7]++;
-            a[i+8]++;
-            a[i+9]++;
-            a[i+10]++;
-            a[i+11]++;
-            a[i+12]++;
-            a[i+13]++;
-            a[i+14]++;
-            a[i+15]++;
         }
         return new Object[]{ a };
     }
 
     @Test
-    @IR(counts = {IRNode.LOAD_VECTOR_B, "> 0",
-                  IRNode.ADD_VB, "> 0",
-                  IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+    @IR(counts = {IRNode.LOAD_VECTOR_B, IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.ADD_VB,        IRNode.VECTOR_SIZE + "min(max_byte, 8)", "> 0",
+                  IRNode.STORE_VECTOR,                                           "> 0"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "false"})
     @IR(counts = {IRNode.LOAD_VECTOR_B, "= 0",
                   IRNode.ADD_VB, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
-    static Object[] test14cB(byte[] a) {
+    static Object[] test14fB(byte[] a) {
         // non-power-of-2 stride
-        for (int i = 0; i < RANGE-20; i+=5) {
+        for (int i = 0; i < RANGE-40; i+=12) {
             a[i+0]++;
             a[i+1]++;
             a[i+2]++;
@@ -1223,14 +1483,6 @@ public class TestAlignVector {
             a[i+5]++;
             a[i+6]++;
             a[i+7]++;
-            a[i+8]++;
-            a[i+9]++;
-            a[i+10]++;
-            a[i+11]++;
-            a[i+12]++;
-            a[i+13]++;
-            a[i+14]++;
-            a[i+15]++;
         }
         return new Object[]{ a };
     }
@@ -1366,7 +1618,7 @@ public class TestAlignVector {
                   IRNode.ADD_VL, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test17a(long[] a) {
         // Unsafe: vectorizes with profiling (not xcomp)
         for (int i = 0; i < RANGE; i++) {
@@ -1395,7 +1647,7 @@ public class TestAlignVector {
                   IRNode.STORE_VECTOR, "> 0"},
         applyIf = {"MaxVectorSize", ">=32"},
         applyIfPlatform = {"64-bit", "true"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"})
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"})
     static Object[] test17c(long[] a) {
         // Unsafe: aligned vectorizes
         for (int i = 0; i < RANGE-1; i+=4) {
@@ -1412,7 +1664,7 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_L, IRNode.VECTOR_SIZE_2, "> 0",
                   IRNode.ADD_VL,        IRNode.VECTOR_SIZE_2, "> 0",
                   IRNode.STORE_VECTOR, "> 0"},
-        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"avx512", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIfAnd = {"AlignVector", "false", "MaxVectorSize", ">=64"})
     // Ensure vector width is large enough to fit 64 byte for longs:
@@ -1423,7 +1675,7 @@ public class TestAlignVector {
     @IR(counts = {IRNode.LOAD_VECTOR_L, "= 0",
                   IRNode.ADD_VL, "= 0",
                   IRNode.STORE_VECTOR, "= 0"},
-        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true"},
+        applyIfCPUFeatureOr = {"sse4.1", "true", "asimd", "true", "rvv", "true"},
         applyIfPlatform = {"64-bit", "true"},
         applyIf = {"AlignVector", "true"})
     static Object[] test17d(long[] a) {
