@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,12 +34,9 @@
  */
 
 import jdk.test.lib.process.OutputAnalyzer;
-import jdk.test.whitebox.WhiteBox;
+import jdk.test.whitebox.code.Compiler;
 
 public class AddmodsOption {
-
-    private static final WhiteBox WB = WhiteBox.getWhiteBox();
-    private static final boolean isJVMCISupported = (WB.getBooleanVMFlag("EnableJVMCI") != null);
 
     public static void main(String[] args) throws Exception {
         final String moduleOption = "jdk.httpserver/sun.net.httpserver.simpleserver.Main";
@@ -48,7 +45,7 @@ public class AddmodsOption {
         final String multiModules = ",,jdk.jconsole,jdk.compiler,,";
         final String allSystem = "ALL-SYSTEM";
         final String allModulePath = "ALL-MODULE-PATH";
-        final String loggingOption = "-Xlog:cds=debug,cds+module=debug,cds+heap=info,module=trace";
+        final String loggingOption = "-Xlog:aot=debug,aot+module=debug,aot+heap=info,cds=debug,module=trace";
         final String versionPattern = "java.[0-9][0-9].*";
         final String subgraphCannotBeUsed = "subgraph jdk.internal.module.ArchivedBootLayer cannot be used because full module graph is disabled";
         final String warningIncubator = "WARNING: Using incubator modules: jdk.incubator.vector";
@@ -73,8 +70,8 @@ public class AddmodsOption {
         oa.shouldHaveExitValue(0)
           // version of the jdk.httpserver module, e.g. java 22-ea
           .shouldMatch(versionPattern)
-          .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.jconsole")
-          .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.httpserver");
+          .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.jconsole")
+          .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.httpserver");
 
         // different --add-modules specified during runtime
         oa = TestCommon.execCommon(
@@ -83,8 +80,8 @@ public class AddmodsOption {
             "-m", moduleOption,
             "-version");
         oa.shouldHaveExitValue(0)
-          .shouldContain("Mismatched --add-modules module name(s).")
-          .shouldContain("dump time: jdk.jconsole runtime: jdk.incubator.vector")
+          .shouldContain("Mismatched values for property jdk.module.addmods")
+          .shouldContain("runtime jdk.incubator.vector dump time jdk.jconsole")
           .shouldContain(subgraphCannotBeUsed);
 
         // no module specified during runtime
@@ -92,7 +89,7 @@ public class AddmodsOption {
             loggingOption,
             "-version");
         oa.shouldHaveExitValue(0)
-          .shouldContain("Module jdk.httpserver specified during dump time but not during runtime")
+          .shouldContain("jdk.httpserver specified during dump time but not during runtime")
           .shouldContain(subgraphCannotBeUsed);
 
         // dump an archive without the --add-modules option
@@ -112,7 +109,7 @@ public class AddmodsOption {
             "-m", moduleOption,
             "-version");
         oa.shouldHaveExitValue(0)
-          .shouldContain("--add-modules module name(s) specified during runtime but not found in archive: jdk.jconsole")
+          .shouldContain("jdk.jconsole specified during runtime but not during dump time")
           // version of the jdk.httpserver module, e.g. java 22-ea
           .shouldMatch(versionPattern)
           .shouldContain(subgraphCannotBeUsed);
@@ -143,7 +140,7 @@ public class AddmodsOption {
           .shouldContain("subgraph jdk.internal.module.ArchivedBootLayer is not recorde")
           .shouldHaveExitValue(0);
 
-        if (isJVMCISupported) {
+        if (Compiler.isJVMCIEnabled()) {
             // dump an archive with JVMCI option which indirectly adds the
             // jdk.internal.vm.ci module using the --add-modules option
             archiveName = TestCommon.getNewArchiveName("jvmci-module");
@@ -164,7 +161,7 @@ public class AddmodsOption {
                 "-version");
             try {
                 oa.shouldHaveExitValue(0)
-                  .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.internal.vm.ci");
+                  .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.internal.vm.ci");
             } catch (RuntimeException re) {
                 // JVMCI compile may not be available
                 oa.shouldHaveExitValue(1)
@@ -191,8 +188,8 @@ public class AddmodsOption {
             "-m", moduleOption,
             "-version");
         oa.shouldHaveExitValue(0)
-          .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.compiler")
-          .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.jconsole");
+          .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.compiler")
+          .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.jconsole");
 
         // dump an archive with ALL-SYSTEM in -add-modules
         archiveName = TestCommon.getNewArchiveName("muti-modules");
@@ -235,6 +232,6 @@ public class AddmodsOption {
             "-m", moduleOption,
             "-version");
         oa.shouldHaveExitValue(0)
-          .shouldMatch("cds,module.*Restored from archive: entry.0x.*name jdk.httpserver");
+          .shouldMatch("aot,module.*Restored from archive: entry.0x.*name jdk.httpserver");
     }
 }
